--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^7.0.1",
     "bootstrap": "^5.3.8",
+    "framer-motion": "^12.23.24",
     "highlight.js": "^11.11.1",
     "react": "^19.1.1",
     "react-bootstrap": "^2.10.10",
