--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "styles": "gulp styles",
     "build:staging": "npm run styles && cross-env BUILD_OUT_DIR=staging vite build",
     "images:optimize": "node tools/optimize-images.mjs",
+    "import:portfolio": "node scripts/import-portfolio.mjs",
     "lint": "eslint .",
     "preview": "vite preview",
-    "todo:sync": "node scripts/sync-todo.js",
-    "todo:open": "start .tasks/todo-manager.html"
+    "todo:open": "node scripts/sync-todo.js",
+    "todo:sync": "node scripts/sync-todo.js"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^7.0.1",
@@ -29,10 +30,12 @@
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
     "@vitejs/plugin-react": "^5.0.0",
+    "adm-zip": "^0.5.16",
     "cross-env": "^10.0.0",
     "eslint": "^9.33.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
+    "glob": "^11.0.0",
     "globals": "^16.3.0",
     "globby": "^15.0.0",
     "gulp": "^5.0.1",
