--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "todo:sync": "node scripts/sync-todo.js"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@fortawesome/fontawesome-free": "^7.0.1",
+    "@mui/material": "^7.3.5",
     "bootstrap": "^5.3.8",
     "framer-motion": "^12.23.24",
     "highlight.js": "^11.11.1",
